--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "regenerator-runtime": "^0.13.7",
     "standardized-audio-context": "^25.1.15",
     "tailwindcss": "^2.1.2",
+    "terser-webpack-plugin": "^5.1.2",
     "wicg-inert": "^3.1.1"
   },
   "devDependencies": {
