--- a/client/package.json
+++ b/client/package.json
@@ -41,10 +41,13 @@
     "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
     "html-inline-css-webpack-plugin": "^1.11.0",
     "html-webpack-plugin": "^5.3.1",
+    "imagemin-webp-webpack-plugin": "^3.3.4",
     "mini-css-extract-plugin": "^1.5.0",
     "postcss": "^8.2.12",
     "postcss-csso": "^5.0.1",
